--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dot-object": "^2.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "validator": "^12.1.0"
